# low-latency-cpp-book

./: .bazelrc  BUILD.bazel  MODULE.bazel
benchmarks/: BUILD.bazel
ch4/: BUILD.bazel  lf_queue_example.cpp  logger_example.cpp  macros_example.cpp  mem_pool_example.cpp  socket_example.cpp  socket_utils_example.cpp  thread_example.cpp
common/: BUILD.bazel  lf_queue.h  logger.h  macros.h  mem_pool.h  socket_utils.h  tcp_server.h  tcp_socket.h  thread_utils.h  time_utils.h
exchange/: BUILD.bazel
exchange/market_data/: BUILD.bazel
exchange/matcher/: BUILD.bazel
exchange/order_server/: BUILD.bazel
trading/: BUILD.bazel
trading/market_data/: BUILD.bazel
trading/order_gw/: BUILD.bazel
trading/strategy/: BUILD.bazel
