load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "order_server",
    hdrs = glob(["*.h"], allow_empty = True),
    srcs = glob(["*.cpp"], allow_empty = True),
    strip_include_prefix = "/exchange/order_server",
    deps = ["//common"],
    visibility = ["//visibility:public"],
)
