load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "market_data",
    hdrs = glob(["*.h"], allow_empty = True),
    srcs = glob(["*.cpp"], allow_empty = True),
    strip_include_prefix = "/trading/market_data",
    deps = [
        "//common",
        # market_update.h lives in the exchange — needed to parse multicast frames
        "//exchange/market_data",
    ],
    visibility = ["//visibility:public"],
)
